Ucpf.Languages.C/AstGenerators/CParser.cs
using System.Collections;
using System;
using Antlr.Runtime;
using Antlr.Runtime.Collections;
using Ucpf.Common.Antlr;

// $ANTLR 3.2 Sep 23, 2009 12:02:23 C.g 2010-12-03 00:00:48

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162

/** ANSI C ANTLR v3 grammar

Translated from Jutta Degener's 1995 ANSI C yacc grammar by Terence Parr
July 2006.  The lexical rules were taken from the Java grammar.

Jutta says: "In 1985, Jeff Lee published his Yacc grammar (which
is accompanied by a matching Lex specification) for the April 30, 1985 draft
version of the ANSI C standard.  Tom Stockfisch reposted it to net.sources in
1987; that original, as mentioned in the answer to question 17.25 of the
comp.lang.c FAQ, can be ftp'ed from ftp.uu.net,
   file usenet/net.sources/ansi.c.grammar.Z.
I intend to keep this version as close to the current C Standard grammar as
possible; please let me know if you discover discrepancies. Jutta Degener, 1995"

Generally speaking, you need symbol table info to parse C; typedefs
define types and then IDENTIFIERS are either types or plain IDs.  I'm doing
the min necessary here tracking only type names.  This is a good example
of the global scope (called Symbols).  Every rule that declares its usage
of Symbols pushes a new copy on the stack effectively creating a new
symbol scope.  Also note rule declaration declares a rule scope that
lets any invoked rule see isTypedef boolean.  It's much easier than
passing that info down as parameters.  Very clean.  Rule
direct_declarator can then easily determine whether the IDENTIFIER
should be declared as a type name.

I have only tested this on a single file, though it is 3500 lines.

This grammar requires ANTLR v3.0.1 or higher.

Terence Parr
July 2006
*/
namespace Ucpf.Languages.C.AstGenerators {
	public partial class CParser : Parser
	{
		public static readonly string[] tokenNames = new string[] 
		{
			"<invalid>", 
			"<EOR>", 
			"<DOWN>", 
			"<UP>", 
			"IDENTIFIER", 
			"HEX_LITERAL", 
			"OCTAL_LITERAL", 
			"DECIMAL_LITERAL", 
			"CHARACTER_LITERAL", 
			"STRING_LITERAL", 
			"FLOATING_POINT_LITERAL", 
			"LETTER", 
			"EscapeSequence", 
			"HexDigit", 
			"IntegerTypeSuffix", 
			"Exponent", 
			"FloatTypeSuffix", 
			"OctalEscape", 
			"UnicodeEscape", 
			"WS", 
			"COMMENT", 
			"LINE_COMMENT", 
			"LINE_COMMAND", 
			"'typedef'", 
			"';'", 
			"','", 
			"'='", 
			"'extern'", 
			"'static'", 
			"'auto'", 
			"'register'", 
			"'void'", 
			"'char'", 
			"'short'", 
			"'int'", 
			"'long'", 
			"'float'", 
			"'double'", 
			"'signed'", 
			"'unsigned'", 
			"'{'", 
			"'}'", 
			"'struct'", 
			"'union'", 
			"':'", 
			"'enum'", 
			"'const'", 
			"'volatile'", 
			"'('", 
			"')'", 
			"'['", 
			"']'", 
			"'*'", 
			"'...'", 
			"'+'", 
			"'-'", 
			"'/'", 
			"'%'", 
			"'++'", 
			"'--'", 
			"'sizeof'", 
			"'.'", 
			"'->'", 
			"'&'", 
			"'~'", 
			"'!'", 
			"'*='", 
			"'/='", 
			"'%='", 
			"'+='", 
			"'-='", 
			"'<<='", 
			"'>>='", 
			"'&='", 
			"'^='", 
			"'|='", 
			"'?'", 
			"'||'", 
			"'&&'", 
			"'|'", 
			"'^'", 
			"'=='", 
			"'!='", 
			"'<'", 
			"'>'", 
			"'<='", 
			"'>='", 
			"'<<'", 
			"'>>'", 
			"'case'", 
			"'default'", 
			"'if'", 
			"'else'", 
			"'switch'", 
			"'while'", 
			"'do'", 
			"'for'", 
			"'goto'", 
			"'continue'", 
			"'break'", 
			"'return'"
		};

		public const int T__29 = 29;
		public const int T__28 = 28;
		public const int T__27 = 27;
		public const int T__26 = 26;
		public const int FloatTypeSuffix = 16;
		public const int T__25 = 25;
		public const int T__24 = 24;
		public const int T__23 = 23;
		public const int LETTER = 11;
		public const int EOF = -1;
		public const int T__93 = 93;
		public const int T__94 = 94;
		public const int T__91 = 91;
		public const int T__92 = 92;
		public const int STRING_LITERAL = 9;
		public const int T__90 = 90;
		public const int FLOATING_POINT_LITERAL = 10;
		public const int COMMENT = 20;
		public const int T__99 = 99;
		public const int T__98 = 98;
		public const int T__97 = 97;
		public const int T__96 = 96;
		public const int T__95 = 95;
		public const int T__80 = 80;
		public const int T__81 = 81;
		public const int T__82 = 82;
		public const int T__83 = 83;
		public const int LINE_COMMENT = 21;
		public const int IntegerTypeSuffix = 14;
		public const int CHARACTER_LITERAL = 8;
		public const int T__85 = 85;
		public const int T__84 = 84;
		public const int T__87 = 87;
		public const int T__86 = 86;
		public const int T__89 = 89;
		public const int T__88 = 88;
		public const int WS = 19;
		public const int T__71 = 71;
		public const int T__72 = 72;
		public const int T__70 = 70;
		public const int LINE_COMMAND = 22;
		public const int T__76 = 76;
		public const int T__75 = 75;
		public const int T__74 = 74;
		public const int T__73 = 73;
		public const int DECIMAL_LITERAL = 7;
		public const int EscapeSequence = 12;
		public const int T__79 = 79;
		public const int T__78 = 78;
		public const int T__77 = 77;
		public const int T__68 = 68;
		public const int T__69 = 69;
		public const int T__66 = 66;
		public const int T__67 = 67;
		public const int T__64 = 64;
		public const int T__65 = 65;
		public const int T__62 = 62;
		public const int T__63 = 63;
		public const int Exponent = 15;
		public const int T__61 = 61;
		public const int T__60 = 60;
		public const int HexDigit = 13;
		public const int T__55 = 55;
		public const int T__56 = 56;
		public const int T__57 = 57;
		public const int T__58 = 58;
		public const int T__51 = 51;
		public const int T__52 = 52;
		public const int T__53 = 53;
		public const int T__54 = 54;
		public const int IDENTIFIER = 4;
		public const int T__59 = 59;
		public const int HEX_LITERAL = 5;
		public const int T__50 = 50;
		public const int T__42 = 42;
		public const int T__43 = 43;
		public const int T__40 = 40;
		public const int T__41 = 41;
		public const int T__46 = 46;
		public const int T__47 = 47;
		public const int T__44 = 44;
		public const int T__45 = 45;
		public const int T__48 = 48;
		public const int T__49 = 49;
		public const int OCTAL_LITERAL = 6;
		public const int T__100 = 100;
		public const int T__30 = 30;
		public const int T__31 = 31;
		public const int T__32 = 32;
		public const int T__33 = 33;
		public const int T__34 = 34;
		public const int T__35 = 35;
		public const int T__36 = 36;
		public const int T__37 = 37;
		public const int T__38 = 38;
		public const int T__39 = 39;
		public const int UnicodeEscape = 18;
		public const int OctalEscape = 17;

		// delegates
		// delegators

		protected class Symbols_scope 
		{
			protected internal Set types;
		}
		protected StackList Symbols_stack = new StackList();



		public CParser(ITokenStream input)
			: this(input, new RecognizerSharedState()) {
		}

		public CParser(ITokenStream input, RecognizerSharedState state)
			: base(input, state) {
			InitializeCyclicDFAs();
			this.state.ruleMemo = new Hashtable[213+1];
             
             
		}
        
		protected XmlTreeAdaptor adaptor = new XmlTreeAdaptor();

		public XmlTreeAdaptor TreeAdaptor
		{
			get { return this.adaptor; }
			set {
				this.adaptor = value;
			}
		}

		override public string[] TokenNames {
			get { return CParser.tokenNames; }
		}

		override public string GrammarFileName {
			get { return "C.g"; }
		}


		boolean isTypeName(String name) {
			for (int i = Symbols_stack.size()-1; i>=0; i--) {
				Symbols_scope scope = (Symbols_scope)Symbols_stack.get(i);
				if ( scope.types.contains(name) ) {
					return true;
				}
			}
			return false;
		}


		public class translation_unit_return : XParserRuleReturnScope
		{
			private object tree;
			override public object Tree
			{
				get { return tree; }
				set { tree = (object) value; }
			}
		};

		// $ANTLR start "translation_unit"
		// C.g:58:1: translation_unit : ( external_declaration )+ ;
		public CParser.translation_unit_return translation_unit() // throws RecognitionException [1]
		{   
			Symbols_stack.Push(new Symbols_scope());

			CParser.translation_unit_return retval = new CParser.translation_unit_return();
			retval.Start = input.LT(1);
			int translation_unit_StartIndex = input.Index();
			object root_0 = null;

			CParser.external_declaration_return external_declaration1 = default(CParser.external_declaration_return);




			((Symbols_scope)Symbols_stack.Peek()).types =  new HashSet();

			try 
			{
				if ( (state.backtracking > 0) && AlreadyParsedRule(input, 1) ) 
				{
					return retval; 
				}
				// C.g:63:2: ( ( external_declaration )+ )
				// C.g:63:4: ( external_declaration )+
				{
					root_0 = (object)adaptor.GetNilNode();

					// C.g:63:4: ( external_declaration )+
					int cnt1 = 0;
					do 
					{
						int alt1 = 2;
						alt1 = dfa1.Predict(input);
						switch (alt1) 
						{
						case 1 :
							// C.g:0:0: external_declaration
						{
							PushFollow(FOLLOW_external_declaration_in_translation_unit86);
							external_declaration1 = external_declaration();
							state.followingStackPointer--;
							if (state.failed) return retval;
							if ( state.backtracking == 0 ) adaptor.AddChild(root_0, external_declaration1.Tree, external_declaration1, retval);

						}
							break;

						default:
							if ( cnt1 >= 1 ) goto loop1;
							if ( state.backtracking > 0 ) {state.failed = true; return retval;}
							EarlyExitException eee1 =
								new EarlyExitException(1, input);
							throw eee1;
						}
						cnt1++;
					} while (true);

					loop1:
					;	// Stops C# compiler whining that label 'loop1' has no statements


				}

				retval.Stop = input.LT(-1);

				if ( (state.backtracking==0) )
				{	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
					adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
			}
			catch (RecognitionException re) 
			{
				ReportError(re);
				Recover(input,re);
				// Conversion of the second argument necessary, but harmless
				retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

			}
			finally 
			{
				if ( state.backtracking > 0 ) 
				{
					Memoize(input, 1, translation_unit_StartIndex); 
				}
				Symbols_stack.Pop();

			}
			return retval;
		}
		// $ANTLR end "translation_unit"

		public class external_declaration_return : XParserRuleReturnScope
		{
			private object tree;
			override public object Tree
			{
				get { return tree; }
				set { tree = (object) value; }
			}
		};

		// $ANTLR start "external_declaration"
		// C.g:66:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );
		public CParser.external_declaration_return external_declaration() // throws RecognitionException [1]
		{   
			CParser.external_declaration_return retval = new CParser.external_declaration_return();
			retval.Start = input.LT(1);
			int external_declaration_StartIndex = input.Index();
			object root_0 = null;

			CParser.function_definition_return function_definition2 = default(CParser.function_definition_return);

			CParser.declaration_return declaration3 = default(CParser.declaration_return);



			try 
			{
				if ( (state.backtracking > 0) && AlreadyParsedRule(input, 2) ) 
				{
					return retval; 
				}
				// C.g:82:2: ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration )
				int alt2 = 2;
				alt2 = dfa2.Predict(input);
				switch (alt2) 
				{
				case 1 :
					// C.g:82:4: ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition
				{
					root_0 = (object)adaptor.GetNilNode();

					PushFollow(FOLLOW_function_definition_in_external_declaration122);
					function_definition2 = function_definition();
					state.followingStackPointer--;
					if (state.failed) return retval;
					if ( state.backtracking == 0 ) adaptor.AddChild(root_0, function_definition2.Tree, function_definition2, retval);

				}
					break;
				case 2 :
					// C.g:83:4: declaration
				{
					root_0 = (object)adaptor.GetNilNode();

					PushFollow(FOLLOW_declaration_in_external_declaration127);
					declaration3 = declaration();
					state.followingStackPointer--;
					if (state.failed) return retval;
					if ( state.backtracking == 0 ) adaptor.AddChild(root_0, declaration3.Tree, declaration3, retval);

				}
					break;

				}
				retval.Stop = input.LT(-1);

				if ( (state.backtracking==0) )
				{	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
					adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
			}
			catch (RecognitionException re) 
			{
				ReportError(re);
				Recover(input,re);
				// Conversion of the second argument necessary, but harmless
				retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

			}
			finally 
			{
				if ( state.backtracking > 0 ) 
				{
					Memoize(input, 2, external_declaration_StartIndex); 
				}
			}
			return retval;
		}
		// $ANTLR end "external_declaration"

		public class function_definition_return : XParserRuleReturnScope
		{
			private object tree;
			override public object Tree
			{
				get { return tree; }
				set { tree = (object) value; }
			}
		};

		// $ANTLR start "function_definition"
		// C.g:86:1: function_definition : ( declaration_specifiers )? declarator ( ( declaration )+ compound_statement | compound_statement ) ;
		public CParser.function_definition_return function_definition() // throws RecognitionException [1]
		{   
			Symbols_stack.Push(new Symbols_scope());

			CParser.function_definition_return retval = new CParser.function_definition_return();
			retval.Start = input.LT(1);
			int function_definition_StartIndex = input.Index();
			object root_0 = null;

			CParser.declaration_specifiers_return declaration_specifiers4 = default(CParser.declaration_specifiers_return);

			CParser.declarator_return declarator5 = default(CParser.declarator_return);

			CParser.declaration_return declaration6 = default(CParser.declaration_return);

			CParser.compound_statement_return compound_statement7 = default(CParser.compound_statement_return);

			CParser.compound_statement_return compound_statement8 = default(CParser.compound_statement_return);




			((Symbols_scope)Symbols_stack.Peek()).types =  new HashSet();

			try 
			{
				if ( (state.backtracking > 0) && AlreadyParsedRule(input, 3) ) 
				{
					return retval; 
				}
				// C.g:91:2: ( ( declaration_specifiers )? declarator ( ( declaration )+ compound_statement | compound_statement ) )
				// C.g:91:4: ( declaration_specifiers )? declarator ( ( declaration )+ compound_statement | compound_statement )
				{
					root_0 = (object)adaptor.GetNilNode();

					// C.g:91:4: ( declaration_specifiers )?
					int alt3 = 2;
					alt3 = dfa3.Predict(input);
					switch (alt3) 
					{
					case 1 :
						// C.g:0:0: declaration_specifiers
					{
						PushFollow(FOLLOW_declaration_specifiers_in_function_definition149);
						declaration_specifiers4 = declaration_specifiers();
						state.followingStackPointer--;
						if (state.failed) return retval;
						if ( state.backtracking == 0 ) adaptor.AddChild(root_0, declaration_specifiers4.Tree, declaration_specifiers4, retval);

					}
						break;

					}

					PushFollow(FOLLOW_declarator_in_function_definition152);
					declarator5 = declarator();
					state.followingStackPointer--;
					if (state.failed) return retval;
					if ( state.backtracking == 0 ) adaptor.AddChild(root_0, declarator5.Tree, declarator5, retval);
					// C.g:92:3: ( ( declaration )+ compound_statement | compound_statement )
					int alt5 = 2;
					alt5 = dfa5.Predict(input);
					switch (alt5) 
					{
					case 1 :
						// C.g:92:5: ( declaration )+ compound_statement
					{
						// C.g:92:5: ( declaration )+
						int cnt4 = 0;
						do 
						{
							int alt4 = 2;
							alt4 = dfa4.Predict(input);
							switch (alt4) 
							{
							case 1 :
								// C.g:0:0: declaration
							{
								PushFollow(FOLLOW_declaration_in_function_definition158);
								declaration6 = declaration();
								state.followingStackPointer--;
								if (state.failed) return retval;
								if ( state.backtracking == 0 ) adaptor.AddChild(root_0, declaration6.Tree, declaration6, retval);

							}
								break;

							default:
								if ( cnt4 >= 1 ) goto loop4;
								if ( state.backtracking > 0 ) {state.failed = true; return retval;}
								EarlyExitException eee4 =
									new EarlyExitException(4, input);
								throw eee4;
							}
							cnt4++;
						} while (true);

						loop4:
						;	// Stops C# compiler whining that label 'loop4' has no statements

						PushFollow(FOLLOW_compound_statement_in_function_definition161);
						compound_statement7 = compound_statement();
						state.followingStackPointer--;
						if (state.failed) return retval;
						if ( state.backtracking == 0 ) adaptor.AddChild(root_0, compound_statement7.Tree, compound_statement7, retval);

					}
						break;
					case 2 :
						// C.g:93:5: compound_statement
					{
						PushFollow(FOLLOW_compound_statement_in_function_definition168);
						compound_statement8 = compound_statement();
						state.followingStackPointer--;
						if (state.failed) return retval;
						if ( state.backtracking == 0 ) adaptor.AddChild(root_0, compound_statement8.Tree, compound_statement8, retval);

					}
						break;

					}


				}

				retval.Stop = input.LT(-1);

				if ( (state.backtracking==0) )
				{	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
					adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
			}
			catch (RecognitionException re) 
			{
				ReportError(re);
				Recover(input,re);
				// Conversion of the second argument necessary, but harmless
				retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

			}
			finally 
			{
				if ( state.backtracking > 0 ) 
				{
					Memoize(input, 3, function_definition_StartIndex); 
				}
				Symbols_stack.Pop();

			}
			return retval;
		}
		// $ANTLR end "function_definition"

		protected class declaration_scope 
		{
			protected internal boolean isTypedef;
		}
		protected StackList declaration_stack = new StackList();

		public class declaration_return : XParserRuleReturnScope
		{
			private object tree;
			override public object Tree
			{
				get { return tree; }
				set { tree = (object) value; }
			}
		};

		// $ANTLR start "declaration"
		// C.g:97:1: declaration : ( 'typedef' ( declaration_specifiers )? init_declarator_list ';' | declaration_specifiers ( init_declarator_list )? ';' );
		public CParser.declaration_return declaration() // throws RecognitionException [1]
		{   
			declaration_stack.Push(new declaration_scope());
			CParser.declaration_return retval = new CParser.declaration_return();
			retval.Start = input.LT(1);
			int declaration_StartIndex = input.Index();
			object root_0 = null;

			IToken string_literal9 = null;
			IToken char_literal12 = null;
			IToken char_literal15 = null;
			CParser.declaration_specifiers_return declaration_specifiers10 = default(CParser.declaration_specifiers_return);

			CParser.init_declarator_list_return init_declarator_list11 = default(CParser.init_declarator_list_return);

			CParser.declaration_specifiers_return declaration_specifiers13 = default(CParser.declaration_specifiers_return);

			CParser.init_declarator_list_return init_declarator_list14 = default(CParser.init_declarator_list_return);


			object string_literal9_tree=null;
			object char_literal12_tree=null;
			object char_literal15_tree=null;


			((declaration_scope)declaration_stack.Peek()).isTypedef =  false;

			try 
			{
				if ( (state.backtracking > 0) && AlreadyParsedRule(input, 4) ) 
				{
					return retval; 
				}
				// C.g:104:2: ( 'typedef' ( declaration_specifiers )? init_declarator_list ';' | declaration_specifiers ( init_declarator_list )? ';' )
				int alt8 = 2;
				alt8 = dfa8.Predict(input);
				switch (alt8) 
				{
				case 1 :
					// C.g:104:4: 'typedef' ( declaration_specifiers )? init_declarator_list ';'
				{
					root_0 = (object)adaptor.GetNilNode();

					string_literal9=(IToken)Match(input,23,FOLLOW_23_in_declaration196); if (state.failed) return retval;
					if ( state.backtracking == 0 )
					{string_literal9_tree = (object)adaptor.Create(string_literal9, retval);
						adaptor.AddChild(root_0, string_literal9_tree);
					}
					// C.g:104:14: ( declaration_specifiers )?
					int alt6 = 2;
					alt6 = dfa6.Predict(input);
					switch (alt6) 
					{
					case 1 :
						// C.g:0:0: declaration_specifiers
					{
						PushFollow(FOLLOW_declaration_specifiers_in_declaration198);
						declaration_specifiers10 = declaration_specifiers();
						state.followingStackPointer--;
						if (state.failed) return retval;
						if ( state.backtracking == 0 ) adaptor.AddChild(root_0, declaration_specifiers10.Tree, declaration_specifiers10, retval);

					}
						break;

					}

					if ( (state.backtracking==0) )
					{
						((declaration_scope)declaration_stack.Peek()).isTypedef = true;
					}
					PushFollow(FOLLOW_init_declarator_list_in_declaration206);
					init_declarator_list11 = init_declarator_list();
					state.followingStackPointer--;
